--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Russell Snyder">
 
+    <link href='http://fonts.googleapis.com/css?family=Passion+One:400,700,900' rel='stylesheet' type='text/css'>
+
     <!-- Big CSS -->
     <link href="css/styles.css" rel="stylesheet">
 
@@ -29,59 +31,56 @@
 
 <body>
 
-        <!-- Navigation -->
-    <nav class="navbar navbar-default" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html">EVERDEEN</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li class="dropdown">
-                      <a href="about.html" class="dropdown-toggle" data-toggle="dropdown">About <span class="caret"></span></a> 
-                      <ul class="dropdown-menu" role="menu">
-                        <li><a href="about.html#bio">Bio</a></li>
-                        <li><a href="about.html#band">Band</a></li>
-                        <li><a href="about.html#epk">EPK</a></li>
-                      </ul>                
+    <!--     <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Brand Logo</a>
+    </div>
+
+    Collect the nav links, forms, and other content for toggling
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="pull-left"><a href="#">Dashboard</a></li>
+        <li class="active"><a href="#">Stories</a></li>
+        <li><a href="#">Videos</a></li>
+        <li><a href="#">Photos</a></li>
+        <li class="social pull-right"><a href="#">Social Links</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+ -->
+  <div class="container-fluid">
+    <nav class="navbar navbar-fixed-bottom" role="navigation">
+
+        <div class="">
+          <ul class="nav navbar-nav navbar-custom">
+                    <li id="home" class="visible-xs">
+                      <h1 class="band-name"><a href="index.html"><strong>Ever</strong>deen</a></h1>
                     </li>
-                    <li class="dropdown">
-                      <a href="music.html" class="dropdown-toggle" data-toggle="dropdown">Music <span class="caret"></span></a>               
-                      <ul class="dropdown-menu" role="menu">
-                        <li><a href="music.html#perfect_lines">Album: Perfect Lines</a></li>
-                        <li class="divider"></li>
-                        <li><a href="music.html#video1">Music Video</a></li>
-                      </ul>                
+                    <li id="about">
+                      <a href="about.html">About <i class="fa fa-list-alt"></i></a> 
                     </li>
-                    <li class="dropdown">
-                      <a href="shows.html" class="dropdown-toggle" data-toggle="dropdown">See Us <span class="caret"></span></a>               
-                      <ul class="dropdown-menu" role="menu">
-                        <li><a href="shows.html#upcoming">Upcoming Shows</a></li>
-                        <li><a href="shows.html#previous">Previous Shows</a></li>
-                        <li class="divider"></li>
-                        <li><a href="shows.html#photos">Photo Gallery</a></li>
-                      </ul>                
+                    <li id="music">
+                      <a href="music.html">Hear <i class="fa fa-music"></i></a>               
                     </li>
-                    <li>
-                        <a href="merch.html">Merch</a>
+                    <li id="shows">
+                      <a href="shows.html">See <i class="fa fa-camera-retro"></i></a>               
                     </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
+                    <li id="support">
+                        <a href="support.html">Support <i class="fa fa-heart-o"></i></span></a>
+                    </li>
+                    <li id="contact">
+                        <a href="contact.html">Contact <i class="fa fa-envelope-o"></i></a>
                     </li>
                 </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
+          </div><!-- /.navbar-collapse -->
     </nav>
+  </div><!-- /.container -->
 
 
     <!-- Page Content -->
@@ -90,44 +89,45 @@
         <!-- Introduction Row -->
         <div class="row">
             <div class="xs-col-12 sm-col-6 xs-col-pull-3">
-        
-<div class="social">
-	<a href="https://twitter.com/everdeentheband" target="_blank">
-		<span class="fa-stack fa-lg">
-		  <i class="fa fa-square-o fa-stack-2x"></i>
-		  <i class="fa fa-twitter fa-stack-1x"></i>
-		</span>
-	</a>
-	<a href="https://soundcloud.com/everdeenmusic" target="_blank">
-		<span class="fa-stack fa-lg">
-		  <i class="fa fa-square-o fa-stack-2x"></i>
-		  <i class="fa fa-soundcloud fa-stack-1x"></i>
-		</span>
-	</a>
-	<a href="https://www.facebook.com/everdeenmusic" target="_blank">
-		<span class="fa-stack fa-lg">
-		  <i class="fa fa-square-o fa-stack-2x"></i>
-		  <i class="fa fa-facebook fa-stack-1x"></i>
-		</span>
-	</a>
-	<a href="https://www.youtube.com/watch?v=JTCtzpQs08c&feature=youtu.be" target="_blank">
-		<span class="fa-stack fa-lg">
-		  <i class="fa fa-square-o fa-stack-2x"></i>
-		  <i class="fa fa-youtube fa-stack-1x"></i>
-		</span>
-	</a>
-	<a href="https://everdeenmusic.bandcamp.com/releases" target="_blank">
-		<span class="fa-stack fa-lg">
-		  <i class="fa fa-square-o fa-stack-2x"></i>
-		  <i class="fa fa-headphones fa-stack-1x"></i>
-		</span>
-	</a>
-	<a href="live.html#gallery" target="_blank">
-		<span class="fa-stack fa-lg">
-		  <i class="fa fa-square-o fa-stack-2x"></i>
-		  <i class="fa fa-camera-retro fa-stack-1x"></i>
-		</span>
-	</a>
+        <div class="row">
+	<div class="social col-xs-12 col-xs-offset-0 col-sm-2 col-sm-offset-10">
+		<a href="https://twitter.com/everdeentheband" target="_blank">
+			<span class="fa-stack fa-lg">
+			  <i class="fa fa-square-o fa-stack-2x"></i>
+			  <i class="fa fa-twitter fa-stack-1x"></i>
+			</span>
+		</a>
+		<a href="https://soundcloud.com/everdeenmusic" target="_blank">
+			<span class="fa-stack fa-lg">
+			  <i class="fa fa-square-o fa-stack-2x"></i>
+			  <i class="fa fa-soundcloud fa-stack-1x"></i>
+			</span>
+		</a>
+		<a href="https://www.facebook.com/everdeenmusic" target="_blank">
+			<span class="fa-stack fa-lg">
+			  <i class="fa fa-square-o fa-stack-2x"></i>
+			  <i class="fa fa-facebook fa-stack-1x"></i>
+			</span>
+		</a>
+		<a href="https://www.youtube.com/watch?v=JTCtzpQs08c&feature=youtu.be" target="_blank">
+			<span class="fa-stack fa-lg">
+			  <i class="fa fa-square-o fa-stack-2x"></i>
+			  <i class="fa fa-youtube fa-stack-1x"></i>
+			</span>
+		</a>
+		<a href="https://everdeenmusic.bandcamp.com/releases" target="_blank">
+			<span class="fa-stack fa-lg">
+			  <i class="fa fa-square-o fa-stack-2x"></i>
+			  <i class="fa fa-headphones fa-stack-1x"></i>
+			</span>
+		</a>
+		<a href="live.html#gallery" target="_blank">
+			<span class="fa-stack fa-lg">
+			  <i class="fa fa-square-o fa-stack-2x"></i>
+			  <i class="fa fa-camera-retro fa-stack-1x"></i>
+			</span>
+		</a>
+	</div>
 </div>            </div>
             <div class="xs-col-12 sm-col-6">
                 <h1 id="bio" class="inline">Everdeen
@@ -208,12 +208,17 @@
         <!-- Footer -->
                 <footer>
             <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                <div class="text-center col-sm-6">
+                    <p class="" >Copyright &copy; Everdeen 2015</p>
                 </div>
-                <!-- /.col-lg-12 -->
+
+                <div class="text-center col-sm-6">
+                    <p class="align-center">Web Design by &copy; <a href="http://russellsnyder.io/webdesign">Russell Snyder</a></p>
+                </div>
+
             </div>
-            <!-- /.row -->
+
+
         </footer>
 
     </div>
