--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Russell Snyder">
 
+    <link href='http://fonts.googleapis.com/css?family=Passion+One:400,700,900' rel='stylesheet' type='text/css'>
+
     <!-- Big CSS -->
     <link href="css/styles.css" rel="stylesheet">
 
@@ -36,136 +38,168 @@
   js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.4";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-    <div class="container">
 
-        <div class="row welcome">
-            <div class="col-xs-12">
-            <iframe class="tiny-player col-centered" style="border: 0; height: 43px;" src="https://bandcamp.com/EmbeddedPlayer/album=2350462305/size=small/bgcol=ffffff/linkcol=333333/artwork=none/transparent=true/" seamless><a href="http://everdeenmusic.bandcamp.com/album/perfect-lines">Perfect Lines by Everdeen</a></iframe>
-        </div>
+<!--         <div class="row welcome">
+		</div>
+ -->
+
+    <div class="container">
 
     <!-- Page Content -->
 
-        <div class="row welcome">
-            <div class="col-xs-10 cover-photo img-responsive">
-                <img class="img img-responsive col-centered" src="img/cover.jpg">
+                <div class="row page-topper">
+            <div class="col-sm-6 hidden-xs">
+                <h1 class="band-name"><a href="index.html"><strong>Ever</strong>deen</a></h1>
             </div>
+            <div class="col-xs-12 col-sm-6">
 
-            <div class="social social-land col-xs-1">
-	<a href="https://twitter.com/everdeentheband" target="_blank">
-		<span class="fa-stack fa-lg">
-		  <i class="fa fa-square-o fa-stack-2x"></i>
-		  <i class="fa fa-twitter fa-stack-1x"></i>
-		</span>
-	</a>
-	<a href="https://soundcloud.com/everdeenmusic" target="_blank">
-		<span class="fa-stack fa-lg">
-		  <i class="fa fa-square-o fa-stack-2x"></i>
-		  <i class="fa fa-soundcloud fa-stack-1x"></i>
-		</span>
-	</a>
-	<a href="https://www.facebook.com/everdeenmusic" target="_blank">
-		<span class="fa-stack fa-lg">
-		  <i class="fa fa-square-o fa-stack-2x"></i>
-		  <i class="fa fa-facebook fa-stack-1x"></i>
-		</span>
-	</a>
-	<a href="https://www.youtube.com/watch?v=JTCtzpQs08c&feature=youtu.be" target="_blank">
-		<span class="fa-stack fa-lg">
-		  <i class="fa fa-square-o fa-stack-2x"></i>
-		  <i class="fa fa-youtube fa-stack-1x"></i>
-		</span>
-	</a>
-	<a href="https://everdeenmusic.bandcamp.com/releases" target="_blank">
-		<span class="fa-stack fa-lg">
-		  <i class="fa fa-square-o fa-stack-2x"></i>
-		  <i class="fa fa-headphones fa-stack-1x"></i>
-		</span>
-	</a>
-	<a href="live.html#gallery" target="_blank">
-		<span class="fa-stack fa-lg">
-		  <i class="fa fa-square-o fa-stack-2x"></i>
-		  <i class="fa fa-camera-retro fa-stack-1x"></i>
-		</span>
-	</a>
-</div>        </div>
-                <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="icon-bar"></span>
-                    <span class="sr-only">Toggle navigation<i class="fa fa-bars"></i></span>
-                    <span class="fa fa-bars"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html">EVERDEEN</a>
+			<iframe id="bandcamp-player"style="border: 0; width: 100%; height: 42px;" src="http://bandcamp.com/EmbeddedPlayer/album=2350462305/size=small/bgcol=333333/linkcol=e99708/artwork=none/track=3903504821/transparent=true/" seamless><a href="http://everdeenmusic.bandcamp.com/album/perfect-lines">Perfect Lines by Everdeen</a></iframe>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li class="dropup">
-                      <a href="about.html" class="dropdown-toggle" data-toggle="dropdown">About <span class="caret"></span></a> 
-                      <ul class="dropdown-menu" role="menu">
-                        <li><a href="about.html#bio">Bio</a></li>
-                        <li><a href="about.html#band">Band</a></li>
-                        <li><a href="about.html#epk">EPK</a></li>
-                      </ul>                
-                    </li>
-                    <li class="dropup">
-                      <a href="music.html" class="dropdown-toggle" data-toggle="dropdown">Music <span class="caret"></span></a>               
-                      <ul class="dropdown-menu" role="menu">
-                        <li><a href="music.html#perfect_lines">Album: Perfect Lines</a></li>
-                        <li class="divider"></li>
-                        <li><a href="music.html#video1">Music Video</a></li>
-                      </ul>                
-                    </li>
-                    <li class="dropup">
-                      <a href="shows.html" class="dropdown-toggle" data-toggle="dropdown">See Us <span class="caret"></span></a>               
-                      <ul class="dropdown-menu" role="menu">
-                        <li><a href="shows.html#upcoming">Upcoming Shows</a></li>
-                        <li><a href="shows.html#previous">Previous Shows</a></li>
-                        <li class="divider"></li>
-                        <li><a href="shows.html#photos">Photo Gallery</a></li>
-                      </ul>                
-                    </li>
-                    <li>
-                        <a href="merch.html">Merch</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container -->
-    </nav>
-
- 
-<!--        <div class="row">
-            <div class="col-xs-12 col-md-7">
-               <h2>We are Everdeen</h2>
-               <p>knock over christmas tree attack feet hiss at vacuum cleaner i like big cats and i can not lie. Destroy the blinds cat snacks inspect anything brought into the house. Pelt around the house and up and down stairs chasing phantoms. Destroy couch cough furball so intrigued by the shower. Pelt around the house and up and down stairs chasing phantoms favor packaging over toy poop in litter box, scratch the walls destroy couch. <a href="about.html">Read more about us</a>  </p> 
-
-               <p>Hunt by meowing loudly at 5am next to human slave food dispenser refuse to drink water except out of someone's glass or sleep nap damn that dog . Hiss at vacuum cleaner sweet beast lick butt curl into a furry donut <a href="shows.html">Check out our shows</a>  </p> 
-
-               <p> Roll on the floor purring your whiskers off flop over, for make meme, make cute face chew iPad power cord find empty spot in cupboard and sleep all day. Paw at your fat belly favor packaging over toy paw at your fat belly or love to play with owner's hair tie meow. <a href="contact.html">Let us know!</a>  </p> 
-
-            </div>
-
-            <div class="col-xs-12 col-md-5">
-                <div class="fb-page" data-href="https://www.facebook.com/everdeenmusic" data-width="100%" data-height="700px;" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/everdeenmusic"><a href="https://www.facebook.com/everdeenmusic">Everdeen</a></blockquote></div></div>
-            </div>
-
-         </div> -->
-
-
-        <!-- Footer -->
 
 
     </div>
-    <!-- /.container -->
+
+        <div class="row">
+	<div class="social col-xs-12 col-xs-offset-0 col-sm-2 col-sm-offset-10">
+		<a href="https://twitter.com/everdeentheband" target="_blank">
+			<span class="fa-stack fa-lg">
+			  <i class="fa fa-square-o fa-stack-2x"></i>
+			  <i class="fa fa-twitter fa-stack-1x"></i>
+			</span>
+		</a>
+		<a href="https://soundcloud.com/everdeenmusic" target="_blank">
+			<span class="fa-stack fa-lg">
+			  <i class="fa fa-square-o fa-stack-2x"></i>
+			  <i class="fa fa-soundcloud fa-stack-1x"></i>
+			</span>
+		</a>
+		<a href="https://www.facebook.com/everdeenmusic" target="_blank">
+			<span class="fa-stack fa-lg">
+			  <i class="fa fa-square-o fa-stack-2x"></i>
+			  <i class="fa fa-facebook fa-stack-1x"></i>
+			</span>
+		</a>
+		<a href="https://www.youtube.com/watch?v=JTCtzpQs08c&feature=youtu.be" target="_blank">
+			<span class="fa-stack fa-lg">
+			  <i class="fa fa-square-o fa-stack-2x"></i>
+			  <i class="fa fa-youtube fa-stack-1x"></i>
+			</span>
+		</a>
+		<a href="https://everdeenmusic.bandcamp.com/releases" target="_blank">
+			<span class="fa-stack fa-lg">
+			  <i class="fa fa-square-o fa-stack-2x"></i>
+			  <i class="fa fa-headphones fa-stack-1x"></i>
+			</span>
+		</a>
+		<a href="live.html#gallery" target="_blank">
+			<span class="fa-stack fa-lg">
+			  <i class="fa fa-square-o fa-stack-2x"></i>
+			  <i class="fa fa-camera-retro fa-stack-1x"></i>
+			</span>
+		</a>
+	</div>
+</div>
+    <div class="container">
+        <div class="cover-photo">
+                <img class="img img-responsive" src="img/BandPhoto2.png">
+		</div>
+
+	</div>
+
+    <div class="container">
+
+        <section>
+          <div class="row">
+                <div class="col-xs-12 col-sm-5">
+                   <h2>Upcoming Shows:</h2>
+                   <ul>August 14th:
+                        <li>In beautiful <a href="http://www.winnenden.de/,Lde/start/kultur-sport-tourismus/Kunsttreff+Marktbrunnen.html">Winnenden</a></li>
+                   </ul>
+                </div>
+
+                <div class="col-xs-12 col-sm-6">
+                <h3>Facebook Feed</h3>
+                    <div class="fb-page" data-href="https://www.facebook.com/everdeenmusic" data-width="100%" data-height="700px;" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true" data-show-posts="true">
+                        <div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/everdeenmusic"><a href="https://www.facebook.com/everdeenmusic"></a></blockquote></div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+    </div>
+
+    <div class="container-fluid">
+         <!--     <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Brand Logo</a>
+    </div>
+
+    Collect the nav links, forms, and other content for toggling
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="pull-left"><a href="#">Dashboard</a></li>
+        <li class="active"><a href="#">Stories</a></li>
+        <li><a href="#">Videos</a></li>
+        <li><a href="#">Photos</a></li>
+        <li class="social pull-right"><a href="#">Social Links</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+ -->
+  <div class="container-fluid">
+    <nav class="navbar navbar-fixed-bottom" role="navigation">
+
+        <div class="">
+          <ul class="nav navbar-nav navbar-custom">
+                    <li id="home" class="visible-xs">
+                      <h1 class="band-name"><a href="index.html"><strong>Ever</strong>deen</a></h1>
+                    </li>
+                    <li id="about">
+                      <a href="about.html">About <i class="fa fa-list-alt"></i></a> 
+                    </li>
+                    <li id="music">
+                      <a href="music.html">Hear <i class="fa fa-music"></i></a>               
+                    </li>
+                    <li id="shows">
+                      <a href="shows.html">See <i class="fa fa-camera-retro"></i></a>               
+                    </li>
+                    <li id="support">
+                        <a href="support.html">Support <i class="fa fa-heart-o"></i></span></a>
+                    </li>
+                    <li id="contact">
+                        <a href="contact.html">Contact <i class="fa fa-envelope-o"></i></a>
+                    </li>
+                </ul>
+          </div><!-- /.navbar-collapse -->
+    </nav>
+  </div><!-- /.container -->
+    </div>
+ 
+ 
+                    <footer>
+            <div class="row">
+                <div class="text-center col-sm-6">
+                    <p class="" >Copyright &copy; Everdeen 2015</p>
+                </div>
+
+                <div class="text-center col-sm-6">
+                    <p class="align-center">Web Design by &copy; <a href="http://russellsnyder.io/webdesign">Russell Snyder</a></p>
+                </div>
+
+            </div>
+
+
+        </footer>
+
+
+ 
 
 
         <!-- jQuery -->
