--- a/support.html
+++ b/support.html
@@ -129,64 +129,15 @@
         <!-- Introduction Row -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">We live music
-                    <small>Meet the Band</small>
+                <h1 class="page-header">Buy our Merch
+                    <small>Support our Art</small>
                 </h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
+                <p>Coming soon!!</p>
             </div>
         </div>
 
-        <div class="row">
-          <div class="col-xs-12 col-md-7">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-6 col-md-offset-3">
-                  <div class="well well-sm">
-                    <form class="form-horizontal" action="" method="post">
-                      <fieldset>
-                        <legend class="text-center">What's up?</legend>
 
-                        <!-- Name input-->
-                        <div class="form-group">
-                          <label class="col-md-3 control-label" for="name">Name</label>
-                          <div class="col-md-9">
-                            <input id="name" name="name" type="text" placeholder="Joe Cool Dude" class="form-control">
-                          </div>
-                        </div>
 
-                        <!-- Email input-->
-                        <div class="form-group">
-                          <label class="col-md-3 control-label" for="email">E-mail</label>
-                          <div class="col-md-9">
-                            <input id="email" name="email" type="text" placeholder="something@gmail.com" class="form-control">
-                          </div>
-                        </div>
-
-                        <!-- Message body -->
-                        <div class="form-group">
-                          <label class="col-md-3 control-label" for="message">Your message</label>
-                          <div class="col-md-9">
-                            <textarea class="form-control" id="message" name="message" placeholder="Thanks you for messaging us :-)" rows="5"></textarea>
-                          </div>
-                        </div>
-
-                        <!-- Form actions -->
-                        <div class="form-group">
-                          <div class="col-md-12 text-right">
-                            <button type="submit" class="btn btn-primary btn-lg"><i class="fa fa-paper-plane"></i>Send Away! </button>
-                          </div>
-                        </div>
-                      </fieldset>
-                    </form>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-md-5">
-            <div class="fb-comments" data-href="https://www.facebook.com/everdeenmusic" data-width="100%" data-numposts="5"></div>       
-          </div>    
-        </div><!-- end row -->
         <hr>
 
         <!-- Footer -->
@@ -217,7 +168,3 @@
 </body>
 
 </html>
-
- 
-
-
